organization and docker build

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Telep</title>
+    <title>Jonathan Telep</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
@@ -16,9 +16,9 @@
         </div>
     </div>
 
-    <div class="modal" id="gameModal">
+    <div id="gameModal" class="modal">
         <div class="modal-content">
-            <span class="close-button" id="closeGame">×</span>
+            <span id="closeGame" class="close-button">&times;</span>
             <div id="game">
                 <div id="score">Score: 0</div>
                 <div id="dino"></div>
@@ -27,6 +27,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script type="module" src="js/main.js"></script>
 </body>
 </html>
