--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Jonathan Telep</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
@@ -12,7 +12,7 @@
         <div id="output"></div>
         <div class="command-line">
             <span class="prompt">~/content $</span>
-            <input type="text" id="command" autofocus>
+            <input type="text" id="command" autocomplete="off" autocapitalize="none">
         </div>
     </div>
 
