--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Jonathan Telep</title>
     <link rel="icon" type="image/svg+xml" href="public/telep-io-logo-white.svg">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=3">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 <body>
@@ -46,10 +46,7 @@
                     </div>
                     <div id="explorer-tree"></div>
                 </div>
-                <div id="editor-body">
-                    <div id="editor-line-numbers"></div>
-                    <pre id="editor-content"></pre>
-                </div>
+                <div id="editor-body"></div>
             </div>
             <div id="editor-statusbar">
                 <span id="status-filename">new 1</span>
@@ -72,6 +69,6 @@
         </div>
     </div>
 
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/main.js?v=3"></script>
 </body>
 </html>
